[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tp1_ex10"
version = "0.1.0"
description = "Un paquete de calculadora con funciones complejas"
authors = [
    { name = "Alvarez Bianco Luciano", email = "lucagustinalvarez1997@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.com/AlvaBianco/tp1_ex10"
"Bug Tracker" = "https://gitlab.com/AlvaBianco/tp1_ex10/-/issues"

[tool.hatch.build.targets.wheel]
packages = ["calculator"]